bk_ida/gccida/g0/noce_try_abs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_abs/src/ifcvt.c:1890:11: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
c = ( rtx)cond[1]; 
          ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_abs/src/ifcvt.c:1901:69: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insn = earliest; insn != if_info->test_bb->head; insn = ( rtx)insn[1] ) 
                                                                    ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_abs/src/ifcvt.c:1946:32: error: use of undeclared identifier 'machine_mode'
target = expand_simple_unop( ( machine_mode)*( ( unsigned __int8 *)if_info->x + 2), ABS, b, if_info->x, 0); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_abs/src/ifcvt.c:1948:32: error: use of undeclared identifier 'machine_mode'
target = expand_simple_unop( ( machine_mode)*( ( unsigned __int8 *)target + 2), NEG, target, if_info->x, 0); 
                               ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_abs/src/obj/ifcvt.o] Error 1
